syntax = "proto3";

option java_multiple_files = true;
option java_package = "pl.inti.helloworld";
option java_outer_classname = "HelloWorldProto";

service GreeterService {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;
    bytes data = 2;
}

message HelloReply {
    string message = 1;
    bytes data =2;
}